fixed sizing of codemirror div, to avoid useless scrollbar improved behaviour when deleting a single line in codemirror using keyboard shortcut

--- a/src/main/webapp/externals/yasgui.css
+++ b/src/main/webapp/externals/yasgui.css
@@ -7,36 +7,6 @@ body {
 	color: #686772;
 }
 
-/*Codemirror CSS*/
-span.CodeMirror-matchhighlight {
-	background: #e9e9e9
-}
-
-.CodeMirror-focused span.CodeMirror-matchhighlight {
-	background: #e7e4ff !important;
-}
-
-.CodeMirror-gutter {
-	width: 37px;
-}
-
-.CodeMirror {
-	border-width: 1px;
-}
-
-.cm-s-default span.cm-error {
-	border-bottom: 2px dotted red;
-}
-
-/*Custom stuff for the codemirror query input. This makes sure resizing doesnt mess up things*/
-.queryCm {
-	height: 100%;
-	min-height: 300px;
-}
-.queryScrollCm {
-	height: 100%;
-	min-height:300px;
-}
 
 /*Custom stuff for the codemirror query input. This makes sure resizing doesnt mess up things*/
 .bookmarkCm {
